[change] icon, splashの変更
さぽえものロゴに変更

--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "suppemo-cli",
+    "name": "さぽえも",
     "slug": "suppemo-cli",
-    "version": "1.0.0",
+    "version": "0.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
