--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.2.2",
     "expo": "^47.0.9",
+    "expo-av": "^13.0.2",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.6.11",
     "react": "18.1.0",
