--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.2.2",
     "expo": "^47.0.9",
     "expo-av": "^13.0.2",
+    "expo-camera": "^13.1.0",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.6.11",
     "react": "18.1.0",
