--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "@reduxjs/toolkit": "^1.9.1",
@@ -18,6 +19,7 @@
     "expo": "^47.0.9",
     "expo-av": "^13.0.2",
     "expo-camera": "^13.1.0",
+    "expo-file-system": "~15.1.1",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.6.11",
     "react": "18.1.0",
