--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "expo": "^47.0.9",
     "expo-av": "^13.0.2",
     "expo-camera": "^13.1.0",
+    "expo-file-system": "^15.1.1",
+    "expo-image-manipulator": "^11.0.0",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.6.11",
     "react": "18.1.0",
