--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "expo start"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.3",
@@ -31,6 +28,7 @@
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
+    "react-navigation": "^4.4.4",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0"
   },
@@ -38,6 +36,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "prettier": "^2.8.3",
     "typescript": "^4.6.3"
   },
   "private": true
