--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.2.2",
-    "expo": "^47.0.9",
-    "expo-av": "^13.0.2",
-    "expo-camera": "^13.1.0",
-    "expo-file-system": "^15.1.1",
-    "expo-image-manipulator": "^11.0.0",
+    "expo": "^47.0.0",
+    "expo-av": "~13.0.2",
+    "expo-camera": "~13.1.0",
+    "expo-file-system": "~15.1.1",
+    "expo-image-manipulator": "~11.0.0",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.6.11",
     "react": "18.1.0",
@@ -27,14 +27,14 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.9",
+    "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
+    "@babel/core": "^7.19.3",
+    "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "prettier": "^2.8.3",
     "typescript": "^4.6.3"
