--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start"
+    "start": "expo start",
+    "postmerge": "(git diff 'HEAD@{1}' --name-only | grep package.json > /dev/null) && npm i || :"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.3",
@@ -36,6 +37,7 @@
     "@babel/core": "^7.19.3",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
+    "husky": "^8.0.3",
     "prettier": "^2.8.3",
     "typescript": "^4.6.3"
   },
