--- a/package.json
+++ b/package.json
@@ -8,50 +8,48 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-navigation/bottom-tabs": "^6.5.3",
-    "@react-navigation/native": "^6.1.1",
-    "@react-navigation/native-stack": "^6.9.7",
-    "@reduxjs/toolkit": "^1.9.1",
-    "@rneui/base": "^4.0.0-rc.7",
-    "@rneui/themed": "^4.0.0-rc.7",
-    "axios": "^1.2.2",
-    "expo": "^47.0.0",
-    "expo-av": "~13.0.2",
-    "expo-camera": "~13.1.0",
-    "expo-file-system": "~15.1.1",
-    "expo-image-manipulator": "~11.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@rneui/base": "4.0.0-rc.7",
+    "@rneui/themed": "4.0.0-rc.7",
+    "axios": "^1.4.0",
+    "expo": "^48.0.15",
+    "expo-av": "~13.2.1",
+    "expo-camera": "~13.2.1",
+    "expo-file-system": "~15.2.2",
+    "expo-image-manipulator": "~11.1.1",
     "expo-image-picker": "^14.1.1",
-    "expo-status-bar": "~1.4.2",
-    "firebase": "^9.6.11",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
+    "expo-status-bar": "~1.4.4",
+    "firebase": "^9.21.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.7",
     "react-native-elements": "^3.4.3",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7",
-    "react-navigation": "^4.4.4",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0"
+    "redux": "^4.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@types/react": "~18.0.24",
-    "@types/react-native": "~0.70.6",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "eslint": "^8.36.0",
+    "@babel/core": "^7.21.5",
+    "@types/react": "~18.0.38",
+    "@types/react-native": "~0.71.6",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
-    "prettier": "^2.8.7",
+    "prettier": "^2.8.8",
     "typescript": "^4.9.5"
   },
   "private": true
